增加模板管理
